# agent-adversarial-tester

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test_and_lint.yml
logs/final_verify_3/: full_trace_demoagent.json  trace_AATR-001_direct_injection.json  trace_AATR-002_instruction_hierarchy.json  trace_AATR-003_delimiter_escape.json
logs/run_03/: full_trace_demoagent.json  trace_AATR-001_direct_injection.json  trace_AATR-002_instruction_hierarchy.json  trace_AATR-003_delimiter_escape.json  trace_AATR-004_base64_encoding.json  trace_AATR-005_gradual_escalation.json
src/agent_adversarial_tester/: __init__.py  cli.py  models.py  target.py
src/agent_adversarial_tester/attacks/: __init__.py  adaptive_adversary.py  exhaustion.py  extraction.py  hallucination.py  hijacking.py  injection.py  leakage.py  misuse.py
src/agent_adversarial_tester/detectors/: __init__.py  ai_judge.py  exhaustion.py  extraction.py  hallucination.py  hijacking.py  injection.py  leakage.py  misuse.py  signals.py
src/agent_adversarial_tester/harness/: __init__.py
src/agent_adversarial_tester/reporting/: __init__.py  html_reporter.py  json_reporter.py  terminal_reporter.py
src/agent_adversarial_tester/utils/: __init__.py  attack_tracer.py  cost_analyzer.py
tests/: demo_agent.py  test_harness.py
