[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-adversarial-tester"
version = "0.1.0"
description = "Red team your AI agents. Automated adversarial testing for agentic AI systems."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Daniel López Orta", email = "daniellopezorta39@gmail.com" }]
keywords = [
    "agent", "security", "red-team", "adversarial", "testing",
    "prompt-injection", "owasp", "llm", "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
agent-redteam = "agent_adversarial_tester.cli:main"

[project.urls]
Homepage = "https://github.com/daniellopez882/agent-adversarial-tester"
Repository = "https://github.com/daniellopez882/agent-adversarial-tester"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
